objects/OAuth_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>App_Type__c</fullName>
        <label>App Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GitHub</fullName>
                    <default>true</default>
                    <label>GitHub</label>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Callback_Url__c</fullName>
        <label>Callback Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Config</label>
    <pluralLabel>OAuth Configs</pluralLabel>
</CustomObject>